--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Finance</title>
+        <title>Cloud Advisory -AWS training</title>
 </head>
 <body>
-    <h1>Welcome to Mini Finance</h1>
-    <p>This is a basic HTML file created inside a Git repository.</p>
+    <h1>Cloud Advisory - AWS Training for AWS </h1>
+    <p>Get expert AWS Training at Cloud Advisory.</p>
+    <h2>Contact us</h2>
+    <p>Email : ogheneraroakpo@gmail.com</p>
 </body>
 </html>
